# aras-vfs

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  core.cppm  errors.cppm  log.cppm  log_sinks.cppm  result.cppm  types.cppm
src/storage/: CMakeLists.txt  interface.cppm  storage.cppm  types.cppm
src/vfs/: CMakeLists.txt  file_handle.cppm  interface.cppm  node_registry.cppm  path_cache.cppm  path_resolver.cppm  types.cppm  vfs.cppm
tests/: CMakeLists.txt
tests/vfs/: CMakeLists.txt  file_handle_test.cppm  node_registry_test.cppm  path_cache_test.cppm  path_resolver_test.cppm
